# tinyraytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
include/: geometry.hpp
src/: tinyraytracer.cpp
tools/: build.sh  clang-tidy.sh
